# lernza

./: CHANGELOG.md
contracts/certificate/: Cargo.toml
contracts/certificate/src/: lib.rs
contracts/common/src/: lib.rs
contracts/milestone/src/: lib.rs  test.rs
contracts/milestone/test_snapshots/test/: test_approve_already_completed_fails.1.json  test_approve_completion_multiple_approvals.1.json  test_competitive_mode_first_winners_rewarded.1.json  test_competitive_mode_limited_winners.1.json  test_competitive_mode_per_milestone_limits.1.json  test_competitive_mode_rewards_faster_completers.1.json  test_double_approval_fails.1.json  test_mode_cannot_change_after_first_completion.1.json  test_pause_blocks_milestone_writes_until_unpaused.1.json  test_peer_review_respects_sequential_unlocks.1.json  test_peer_verification_with_different_distribution_modes.1.json  test_self_approval_fails.1.json  test_submit_for_review.1.json  (+2 more)
contracts/quest/src/: lib.rs  test.rs
contracts/rewards/src/: lib.rs  test.rs
contracts/rewards/tests/: integration_test.rs  panic_resilience_test.rs  proptest_invariants.rs
docs/: EVENT_REFERENCE.md
frontend/: index.html  package.json  pnpm-lock.yaml  vercel.json
frontend/src/components/: app-shell.tsx  navbar.tsx  swipeable-quest-card.tsx
frontend/src/hooks/: use-async-data.ts  use-quest-data.ts  use-quest-stats.ts  use-transaction-timebounds.ts
frontend/src/lib/: horizon-activity.ts  query-client.ts
frontend/src/pages/: dashboard.a11y.test.tsx  dashboard.tsx  leaderboard.tsx  profile.test.tsx  profile.tsx  quest.tsx
(+46 files in other folders)
