[package]
name = "certificate"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
stellar-tokens = { workspace = true }
stellar-access = { workspace = true }
stellar-macros = { workspace = true }
common = { path = "../common" }

[features]
testutils = []

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
